0032629: Configuration, scripts - add USE_PTHREADS building option to wasm_build.bat